--- a/scripts/6_figures.Rmd
+++ b/scripts/6_figures.Rmd
@@ -6,13 +6,9 @@ editor_options:
 ---
 
 ```{r initialize}
-source("scripts/0_start.R")
-```
+source("/Users/christophercrawford/Google Drive/_Projects/abandonment_trajectories/scripts/0_start.R")
 
-```{r basemaps}
-source("")
 ```
-
 
 ```{r load-data}
 # for use on cluster:
